--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ Django==5.2
 djangorestframework==3.15.0
 djangorestframework-simplejwt==5.2.2
 django-filter==24.1
+django-environ==0.12.0
 celery==5.5.0
 redis==4.7.0
